@@ -1,21 +1,16 @@
 package com.eureka.client.security;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.logging.log4j.util.Strings;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.core.OAuth2AuthenticatedPrincipal;
 import org.springframework.security.oauth2.server.resource.introspection.OAuth2IntrospectionAuthenticatedPrincipal;
 import org.springframework.security.oauth2.server.resource.introspection.OpaqueTokenIntrospector;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.stream;
 
@@ -23,7 +18,6 @@ import static java.util.Arrays.stream;
 @Slf4j
 public class CustomTokenIntrospector implements OpaqueTokenIntrospector {
     private final OpaqueTokenIntrospector delegate;
-    private static final ObjectMapper MAPPER = new ObjectMapper();
 
     public CustomTokenIntrospector() {
         this.delegate = new CustomIntrospector(
@@ -36,7 +30,7 @@ public class CustomTokenIntrospector implements OpaqueTokenIntrospector {
     public OAuth2AuthenticatedPrincipal introspect(String token) {
         OAuth2AuthenticatedPrincipal principal = this.delegate.introspect(token);
         String username = principal.getAttribute("name");
-        Collection<GrantedAuthority> authorities = principal.getAuthorities().stream().map(a -> (GrantedAuthority) a).collect(Collectors.toList());
+        Collection<GrantedAuthority> authorities = principal.getAuthorities().stream().map(GrantedAuthority.class::cast).toList();
         return new OAuth2IntrospectionAuthenticatedPrincipal(username, principal.getAttributes(), authorities);
     }
 
